libf2c2 (20130926-4) UNRELEASED; urgency=medium

  * d/changelog: Remove trailing whitespaces
  * d/control: Remove trailing whitespaces

 -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 10:20:17 +0200

libf2c2 (20130926-3) unstable; urgency=medium

  * Team upload.
  * Move packaging to salsa.debian.org
  * cme fix dpkg-control
  * debhelper 11

 -- Andreas Tille <tille@debian.org>  Thu, 22 Feb 2018 13:36:24 +0100

libf2c2 (20130926-2) unstable; urgency=medium

  * Team upload
  * Make suitable for creating libraries to be used in non-Fortran programs
    (thanks for the patch to Christian Seiler <christian@iwakd.de>)
    Closes: #826253

 -- Andreas Tille <tille@debian.org>  Fri, 03 Jun 2016 22:11:58 +0200

libf2c2 (20130926-1) unstable; urgency=medium

  * Team upload

  [ Barak A. Pearlmutter ]
  * New upstream version

  [ Andreas Tille ]
  * Add two files that are included in the clapack source but missing here
  * Propagate CFLAGS to make sure clapack tests will succeed
  * cme fix dpkg-control
  * lintian-override for hardening-no-bindnow since this should not be set
  * Conflicts with lower version should be Breaks

 -- Andreas Tille <tille@debian.org>  Thu, 26 May 2016 08:38:04 +0200

libf2c2 (20090411-3) unstable; urgency=medium

  * Adopt package (closes: #810238)
  * dh9
  * bump policy version
  * debian/control homepage, packaging repo
  * multiarch
  * reproducible build, smash gzip timestamp (closes: #788001)
  * source format 3.0 (quilt)
  * modernize debian/copyright

 -- Barak A. Pearlmutter <bap@debian.org>  Mon, 11 Jan 2016 08:42:44 +0000

libf2c2 (20090411-2) unstable; urgency=low

  * Small code changes to uninit.c to fix compilation problems
    on armel architecture

 -- Alan Bain <afrb2@debian.org>  Thu, 6 Aug 2009 20:25:32 +0100


libf2c2 (20090411-1) unstable; urgency=low

  * New upstream source including C++ const correctness changes
    and avoid use of default return type of int