@@ -2,6 +2,7 @@ libf2c2 (20130926-4) UNRELEASED; urgency=medium
 
   * d/changelog: Remove trailing whitespaces
   * d/control: Remove trailing whitespaces
+  * d/rules: Remove trailing whitespaces
 
  -- Ondřej Nový <onovy@debian.org>  Mon, 01 Oct 2018 10:20:17 +0200
 
